--- a/report/main.tex
+++ b/report/main.tex
@@ -34,13 +34,14 @@
 \maketitle 
  
 \section*{Abstract}  
+Procedural Phasor noise is a powerful tool to synthesize normalized noise patterns. However, it also generates artifacts in the form of singularities and rips. We present a method generate a bilobe Phasor Noise instance only containing defined artifacts by synthesizing the phase directly instead of constructing it using the corresponding Gabor noise Instance. We also start development on a method for more complex cases and show how our method can be expanded to surface noise.
   
 \section{Introduction}   
-To keep up with the shorter development cycles of the current times, more work has to be done in less time. The tools with which this is achieved are optimization of workflows as well as automation. While even the automation of repetitive tasks can be challenging, automating creative tasks like content creation is even more so. This is where noise algorithms provide assistance. They provide a way to generate non-repeating patterns over potentially infinite space at low memory and computational cost. Using these patterns to influence different aspects of the content, anything form additional detail on surfaces up to the layout of whole worlds, can be generated automatically. The generated patterns are as varied as the algorithms itself. The different algorithms also provide different levels of influence over the produced pattern. Additional parameters to tune the generated pattern are of course desirable, as a richer set of patterns will be applicable to more situations, therefore offering further automation opportunities.
+To keep up with the shorter development cycles of the current times, more work has to be done in less time. The tools with which this is achieved are optimization of workflows as well as automation. While even the automation of repetitive tasks can be challenging, automating creative tasks like content creation is even more so. This is where noise algorithms provide assistance. They provide a way to generate non-repeating patterns over potentially infinite space at low memory and computational cost. Using these patterns to influence different aspects of the content, anything from additional detail on surfaces up to the layout of whole worlds can be generated automatically. The generated patterns are as varied as the algorithms itself. The different algorithms also provide different levels of influence over the produced pattern. Additional parameters to tune the generated pattern are of course desirable, as a richer set of patterns will be applicable to more situations, therefore offering further automation opportunities.
 
 
 \section{Related Work}
-Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms \citeauthor{survey}, also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today, the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce oriented patterns instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine functions with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be controlled precisely. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a Poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the kernel are used. This is a property leveraged in \cite{gaborNoiseByExample} to generate noise that mimics given textures. Despite of how powerful Gabor noise is, it is still not perfect. One problem it exhibits are the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality, however, is a drawback as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
+Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms, \citeauthor{survey} also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today, the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce oriented patterns instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine functions with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be controlled precisely. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a Poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the kernel are used. This is a property leveraged in \cite{gaborNoiseByExample} to generate noise that mimics given textures. Despite of how powerful Gabor noise is, it is still not perfect. One problem it exhibits are the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality, however, is a drawback as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
 Another big advantage of Gabor noise is its ability to be generated on the surface directly. This does not involve any texture coordinates, so the resulting noise instance does not show any seams. This ability is sought for, as works like \cite{appearanceTextureSynthesis}, \cite{textureSynthesis} and \cite{stripes} show. The former present algorithms that can synthesise textures directly on surfaces, while the latter addresses a more basic problem. This problem is to find a function on a surface that varies along a given direction field with a given rate. This is another piece of work we will look at in the following section.
 
 \section{Background}
@@ -55,7 +56,7 @@ where $f$ and $\vec{u}$ are frequency and direction of the kernel and $\sigma$ r
 $$
 G(\vec{x}) = \sum_ig(\vec{x}-\vec{p}_i),
 $$
-where $\vec{p}_i$ are the positions of the Dirac Impulses. \citeauthor{gaborNoise} also prescribe a random weight to each instance of the kernel. However, since this is not relevant for the following discussion, we omit it here for convenience. Figure \ref{fig:gaborNoise} shows an instance of Gabor Noise. The depicted instance is a bilobe instance. This name stems from the appearance of its power spectrum, which is two Gaussian lobes positioned at the frequency and direction of the used kernel. Using different kernels at different positions leads to a more varied appearance. Since the power spectra add up (and are rescaled) this permits to specify a custom power spectrum. Besides this amount of control Gabor noise can of course be extended from two to three dimensions. However, \citeauthor{gaborNoise} also present a way to generate Gabor Noise directly on the surface of objects, which allows for seamless texturing.
+where $\vec{p}_i$ are the positions of the Dirac Impulses. \citeauthor{gaborNoise} also prescribe a random weight to each instance of the kernel. However, since this is not relevant for the following discussion, we omit it here for convenience. Figure \ref{fig:gaborNoise} shows an instance of Gabor Noise. The depicted instance is a bilobe instance. This name stems from the appearance of its power spectrum, which is two Gaussian lobes positioned at the frequency and direction of the used kernel. Using different kernels at different positions leads to a more varied appearance. Since the power spectra add up (and are rescaled) this permits to specify a custom power spectrum. Besides this amount of control, Gabor noise can of course be extended from two to three dimensions. However, \citeauthor{gaborNoise} also present a way to generate Gabor Noise directly on the surface of objects, which allows for seamless texturing.
 
 \begin{figure}[ht]
   \centering
@@ -70,7 +71,7 @@ Gabor Noise exhibits areas of low contrast, as Figure \ref{fig:gaborNoise} shows
 $$
 \mathcal{S}(s) = \mathcal{F}((s-\overline{s})^2),
 $$
-where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents the mean of the signal. Any nonzero values nearer than a distance $l$ to the origin correspond to low contrast areas bigger than $l$ in the original signal. This can be seen, when comparing Figure \ref{fig:gaborNoise} and \ref{fig:phasorNoise} alongside with figure \ref{fig:spectrumOfVariance}. They also propose a process to remove these low contrast areas, namely by normalizing with the windowed standard deviation. However, this normalization requires to compute the windowed standard deviation, which requires to evaluate the noise in the window used. This leads to a big increase in computational cost, which is a significant drawback of this technique.
+where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents the mean of the signal. Any nonzero values nearer than a distance $l$ to the origin correspond to low contrast areas bigger than $l$ in the original signal. This can be seen, when comparing Figure \ref{fig:gaborNoise} and \ref{fig:phasorNoise} alongside with Figure \ref{fig:spectrumOfVariance}. They also propose a process to remove these low contrast areas, namely by normalizing with the windowed standard deviation. However, this normalization requires to compute the windowed standard deviation, which requires the evaluation of the noise in the used window. This leads to a big increase in computational cost, which is a significant drawback of this technique.
 
 \begin{figure}[ht]
   \centering
@@ -80,11 +81,11 @@ where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents 
 \end{figure}
 
 \subsection{Phasor Noise}\label{sec:phasorNoise}
-The drawback of using the windowed Variance for normalization stems from the fact, that they can not use the noise algorithm's internal information. The logical conclusion is, that the only way to get a normalized noise texture without a big computational overhead is to design a variation of the algorithm, that produces normalized images. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise} for Gabor Noise. They realize, that for a signal of the form $s(x) = f(x)\cdot g(x)$, where $g$ is an oscillating function and $f$ is the envelope of $s$, discarding $f$ leads to a perfectly normalized signal. They then proceed to reformulate the bilobe case of Gabor Noise to have the form
+The drawback of using the windowed variance for normalization stems from the fact, that they can not use the noise algorithm's internal information. The logical conclusion is, that the only way to get a normalized noise texture without a big computational overhead is to design a variation of the algorithm, that produces normalized images. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise} for Gabor Noise. They realize, that for a signal of the form $s(x) = f(x)\cdot g(x)$, where $g$ is an oscillating function and $f$ is the envelope of $s$, discarding $f$ leads to a perfectly normalized signal. They then proceed to reformulate the bilobe case of Gabor Noise to have the form
 $$
 G(\vec{x}) = I(\vec{x})\sin{(f\langle\vec{x},\vec{u}\rangle + \varphi(\vec{x}))},
 $$
-where $f$ and $\vec{u}$ are again the frequency and direction of the main oscillation. $I$ is the envelope of the function and $\varphi(\vec{x})$ is the local phase offset of the oscillating part. $I$ and $\varphi$ are defined in such a way, that this formulation is exactly equivalent to the corresponding Gabor Noise instance. The main tool they use to do this is Phasor addition, hence the name Phasor Noise. Now, like in our example, we can discard the envelope $I$ to obtain a normalized version of Gabor Noise. \citeauthor{phasorNoise} call this a Phasor sine wave. The actual Phasor Noise is the argument of the sine. Therefore, Phasor Noise itself can not be used directly, but can only be used as input for a periodic function. Because it is defined using its corresponding Gabor Noise instance, it inherits the desirable properties of Gabor Noise, namely being band limited and a surface noise formulation. However, as depicted in Figure \ref{fig:phasorNoise}, Phasor Noise exhibits several artifacts previously masked by the low contrast areas. There are two types of artifacts: singularities, where one stripe splits into two and what we will call rips, where the stripes are suddenly offset by some amount. With our method, control can be gained over these artifacts to allow for finer adjustments to the appearance of the noise.
+where $f$ and $\vec{u}$ are again the frequency and direction of the main oscillation. $I$ is the envelope of the function and $\varphi(\vec{x})$ is the local phase offset of the oscillating part. $I$ and $\varphi$ are defined in such a way, that this formulation is exactly equivalent to the corresponding Gabor Noise instance. The main tool they use to do this is phasor addition, hence the name Phasor Noise. Now, like in our example, we can discard the envelope $I$ to obtain a normalized version of Gabor Noise. \citeauthor{phasorNoise} call this a phasor sine wave. The actual Phasor Noise is the argument of the sine. Therefore, Phasor Noise itself can not be used directly, but can only be used as input for a periodic function. Because it is defined using its corresponding Gabor Noise instance, it inherits the desirable properties of Gabor Noise, namely being band limited and a surface noise formulation. However, as depicted in Figure \ref{fig:phasorNoise}, Phasor Noise exhibits several artifacts previously masked by the low contrast areas. There are two types of artifacts: singularities, where one stripe splits into two and what we will call rips, where the stripes are suddenly offset by some amount. With our method, control can be gained over these artifacts to allow for finer adjustments to the appearance of the noise.
 
 \begin{figure}[ht]
   \centering
@@ -93,7 +94,7 @@ where $f$ and $\vec{u}$ are again the frequency and direction of the main oscill
 \end{figure}
 
 \subsection{Stripes Patterns on Surfaces}
-In Section \ref{sec:stripes} we will see, that we need a function, defined on a mesh, that increases with a direction and speed determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. As stated in \cite{stripes}, this is not always trivial, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} provides a solution by deriving an equality constraint, which is then relaxed to a minimization. While necessary to receive a solution, it unfortunately allows new singularities to emerge, which is obviously necessary, when considering an object whose width varies along the stripe direction. As the width the stripes have to cover increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application one could replace their work with another way to generate a function that fulfills this purpose, but here we will use their work.
+In Section \ref{sec:stripes}, we will see, that we need a function $F$, defined on a mesh, that increases with a direction $X$ and speed $\nu$ determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. One way to compute this function is as the integral over the direction field. As stated in \cite{stripes}, this is not always possible, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} also provides a solution. They achieve this by trying to find a complex function $\psi$, whose argument $\alpha$ is equal to $F$. Constraining $d\alpha(Y) = \nu\langle X,Y\rangle$ leads them to differential equation for $\psi$. In most cases this equation does not have a solution, so they relax this constraint to a minimization and obtain a complex version of the Dirichlet energy. They then proceed to minimize this energy akin to the normal Dirichlet energy. While necessary to receive a solution, this minimization unfortunately allows new singularities to emerge, which is obviously necessary, when considering an object whose width varies along the stripe direction. As the width the stripes have to cover increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application, one could replace their work with another way to generate a function that increases according to a vector field, but here we will use their work.
 
 \section{The constant Case}
 We will first look at a simple case. This case corresponds to the bilobe case of Phasor Noise. This means a constant oscillation direction and frequency. However, before we start out, we will define a third type of artifact besides singularities and rips: wobble. Comparing the areas of a Phasor sine wave with a regular sine wave, we find that the lines are not perfectly straight. We will refer to this fact as wobble from now on. From Section \ref{sec:phasorNoise} we recall that in this case Phasor Noise consists of two parts: A function increasing in a given direction and a phase offset. Figure \ref{fig:phasorNoisePhase} shows a Phasor Noise instance as well as its phase offset. Comparing the phase from Figure \ref{fig:phasorNoisePhase} with Figure \ref{fig:phasorNoise}, we can easily find a correspondence between artifacts of the Phasor sine wave and features of the phase. The existence of wobble is caused by the fact, that the phase is not constant even in areas, where there are no other artifacts present. \citeauthor{phasorNoise} already identify that rips are caused by sudden value changes in the phase offset, while singularities are located at points around which the phase offset rotates abruptly.\\
@@ -105,19 +106,22 @@ We will first look at a simple case. This case corresponds to the bilobe case of
   \caption{Phasor Noise (left) and its phase offset (right). Angle is mapped to hue.}\label{fig:phasorNoisePhase}
 \end{figure}
 
-This defines our goal: For a set of points $\vec{s}_i$, at which we want singularities to occur and a set of line segments $l_i$, along which we want rips to occur, we want to construct a varying phase offset $\varphi_c$ that suddenly changes when crossing any $l_i$ and abruptly rotates around all $\vec{s}_i$. Since, this is a phase offset the numbers are considered modulo $2\pi$. Since wobble is the artifact most characteristic for Phasor Noise, we will assume that wobble is present in all applications, which will become relevant in Section \ref{sec:singularities}, where we will have a look at how to create singularities. How to actually create wobble will be explained in Section \ref{sec:wobble}. The last artifact type, that is still missing is rips, which will be explored in Section \ref{sec:rips}. After that we will have a look at adaption these methods to an environment with a non-constant direction field in Section \ref{sec:nonConstant}. Following this is Section \ref{sec:results}, where we will present some applications of the developed methods.
+This defines our goal: For a set of points $\vec{s}_i$, at which we want singularities to occur and a set of line segments $l_i$, along which we want rips to occur, we want to construct a varying phase offset $\varphi_c$ that suddenly changes when crossing any $l_i$ and abruptly rotates around all $\vec{s}_i$. Since this is a phase offset, the numbers are considered modulo $2\pi$. Since wobble is the artifact most characteristic for Phasor Noise, we will assume that wobble is present in all applications, which will become relevant in Section \ref{sec:singularities}, where we will have a look at how to create singularities. How to actually create wobble will be explained in Section \ref{sec:wobble}. The last artifact type, that is still missing is rips, which will be explored in Section \ref{sec:rips}. After that, we will have a look at adapting these methods to an environment with a non-constant direction field in Section \ref{sec:nonConstant}. Following this is Section \ref{sec:results}, where we will present some applications of the developed methods.
 
 \subsection{Wobble}\label{sec:wobble}
-The first kind of artifact we will have a look at is wobble. As already mentioned, wobble is created by a non-constant phase. Since we are creating noise, we want this to be governed by randomness. Taking another look at Figure \ref{fig:phasorNoisePhase}, we can not identify any obvious anisotropy. Therefore any noise algorithm whose appearance is not obviously anisotropic will be sufficient to create a similar appearance to Phasor Noise. An important thing to note is, that this algorithm does not use the fact, that the output domain is cyclic. There are two reasons for this: The first is, that there is a multitude of noise algorithms with an equally large set of properties, that output to the real domain between $-1$ and $1$.\\
-The other, more important one is that it is harder to ensure the absence of singularities when using a cyclic output domain. Take for example a simple algorithm that is based on an integer lattice and at each point of this lattice determines a random number and interpolates between them. Since we are using angles, these random numbers will be between $0$ and $2\pi$. We are on a cyclical domain, so the interpolation will check if the points are nearer when using the normal difference or if they are nearer when computing the difference over the $0$/$2\pi$ boundary and choose the interpolation direction accordingly. We will now construct a possible case, where this algorithm will a create singularity. This case is also shown in Figure \ref{fig:simpleAlgirithmSingularity}. To construct this case, choose a grid cell $C$ and its four corner points $p_1$, $p_2$, $p_3$ and $p_4$ in such a way, that $(p_1,p_2,p_3,p_4,p_1)$ moves along the edges around the cell. Now, let the algorithm pick $0$, $\frac{\pi}{2}$,$\pi$ and $\frac{3\pi}{2}$ for $p_1$, $p_2$, $p_3$ and $p_4$ respectively. Since we interpolate on a cyclical domain, the points on the edge $(p_4,p_1)$ will be assigned values interpolated between $\frac{3\pi}{2}$ and $0$. We therefore created a path with a winding number of $1$ and therefore according to the argument principle of complex analysis this path contains a singularity. Note, that this problem is not easily fixed, without removing the cyclic interpolation.\\
-
+The first kind of artifact we will have a look at is wobble. As already mentioned, wobble is created by a non-constant phase. Since we are creating noise, we want this to be governed by randomness. Taking another look at Figure \ref{fig:phasorNoisePhase}, we can not identify any obvious anisotropy. Therefore, any noise algorithm whose appearance is not obviously anisotropic will be sufficient to create a similar appearance to Phasor Noise. An important thing to note is, that this algorithm does not use the fact, that the output domain is cyclic. There are two reasons for this: The first is, that there is a multitude of noise algorithms with an equally large set of properties, that output to the real domain between $-1$ and $1$.\\
+The other, more important one is that it is harder to ensure the absence of singularities when using a cyclic output domain. Take for example a simple algorithm that is based on an integer lattice and at each point of this lattice determines a random number and interpolates between them. Since we are using angles, these random numbers will be between $0$ and $2\pi$. We are on a cyclical domain, so the interpolation will check if the points are nearer when using the normal difference or if they are nearer when computing the difference over the $0$/$2\pi$ boundary and choose the interpolation direction accordingly. We will now construct a possible case, where this algorithm will a create singularity. This case is also shown in Figure \ref{fig:simpleAlgirithmSingularity}. To construct this case, choose a grid cell $C$ and its four corner points $p_1$, $p_2$, $p_3$ and $p_4$ in such a way, that $(p_1,p_2,p_3,p_4,p_1)$ moves along the edges around the cell. Now, let the algorithm pick $0$, $\frac{\pi}{2}$, $\pi$ and $\frac{3\pi}{2}$ for $p_1$, $p_2$, $p_3$ and $p_4$ respectively. Since we interpolate on a cyclical domain, the points on the edge $(p_4,p_1)$ will be assigned values interpolated between $\frac{3\pi}{2}$ and $0$. We therefore created a path with a winding number of $1$ and therefore, according to the argument principle of complex analysis, this path contains a singularity. Note that this problem is not easily fixed without removing the cyclic interpolation.
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.49\linewidth]{images/simpleAlgo}
   \caption{A simple noise algorithm creating a singularity on a cyclical domain. The circles represent the points of the lattice while in between them the interpolation is shown. The rest shows possible values for the domain. Angle is again mapped to hue.}\label{fig:simpleAlgirithmSingularity}
 \end{figure}
 
-Therefore, we will stick with algorithms outputting to the classic domain of $[-1,1]$. The actual phase offset is of course still in the cyclic domain on $[0,2\pi)$, so the interval of $[-1,1]$ is mapped to $[2\pi-1,1]$. When more or less wobble is needed, these numbers can of course be rescaled to fit the specific needs. Figure \ref{fig:wobble} shows a Phasor sine wave with a phase offset applied. This phase offset is generated using a simple hierarchical algorithm, that uses cosine interpolation between lattice points. Note that while there is an obvious difference in the phase offset used in Figure \ref{fig:wobble} and the phase obtained from real Phasor Noise as shown in Figure \ref{fig:phasorNoisePhase}, there is no noticeable difference in wobble when applied to a Phasor sine wave as shown in Figure \ref{fig:phasorNoise}.
+Therefore, we will stick with algorithms outputting to the classic domain of $[-1,1]$. Since we need to scale these value and are using this function to generate angle values, we generate the wobble phase offset $w(\vec{x})$ as
+$$
+w(\vec{x}) = (a\cdot n(\vec{x}))\ \mathrm{mod}\ 2\pi,
+$$
+where $a$ determines how much wobble will be added, while $n$ represents the noise function used as a base. Figure \ref{fig:wobble} shows a Phasor sine wave with a phase offset applied. This phase offset is generated using a simple hierarchical algorithm, that uses cosine interpolation between lattice points. Note that while there is an obvious difference in the phase offset used in Figure \ref{fig:wobble} and the phase obtained from real Phasor Noise as shown in Figure \ref{fig:phasorNoisePhase}, there is no noticeable difference in wobble when applied to a Phasor sine wave as shown in Figure \ref{fig:phasorNoise}.
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.49\linewidth]{images/wobble}
@@ -321,7 +325,7 @@ Our technique naturally lends itself to applications Phasor noise is useful in, 
   \vspace{2pt}
 
   \includegraphics[width=0.49\linewidth]{images/brickRespecting}
-  \caption{Adding detail to a na\"ively upscaled marble brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
+  \caption{Adding detail to a na\"ively upscaled marble brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right). In this case this is at the edges between the white and grey parts of the texture.}\label{fig:bricks}
 \end{figure}
 
 \section{Future Work}
@@ -329,7 +333,7 @@ Despite the demonstrated use cases for constructed artifacts in Phasor noise and
 Another avenue, that can be explored, is an adaptation to work in higher dimensions, especially in a three dimensional environment. For the integrable case, this is can be done by defining three dimensional equivalents to the artifact generation functions we defined here. The non-integrable case also requires the definition of a function, that can be used as a base for the oscillation.
 
 \section{Conclusion}
-In the integrable case, we can now freely control the artifacts Phasor noise exhibits. This allows the automated creation of new types of content, as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
+In the integrable case, we can now freely control the artifacts Phasor noise exhibits. We can do this by constructing the phase using a linear function as a base. We then proceed to add constructed functions, that correspond to the artifact types and positions we want. Using a periodic function, we can than convert this to a Phasor noise instance. We also has a look at how the non-integrable case can be handled, where the difficulty lies in finding a base that is consistent with the given direction field. The presented method allows the automated creation of new types of content, as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
 
 
 \FloatBarrier
